@@ -59,10 +59,11 @@
     (%%TEXI_TGZ_SIZE%%K bytes gzipped tar file).</a></li>
 </ul>
 
-<p>Documentation is also available in a few experimental formats:
+<p>There is also an API reference manual:
 
 <ul>
   <li><a href="../reference/">HTML API Reference Manual (GTK-DOC)</a>.</li>
+  <li><a href="../reference/%%PACKAGE%%.pdf">PDF Reference API Manual (GTK-DOC)</a>.
   <li><a href="../reference/gsasl.devhelp">DevHelp API Reference Manual (GTK-DOC)</a>.</li>
   <li><a href="../components.png">PNG image with developer and API information</a>.</li>
 </ul>
