@@ -1,13 +1,14 @@
 --- gendocs_template.orig	2008-06-19 15:48:31.000000000 +0200
 +++ gendocs_template	2008-06-19 15:49:05.000000000 +0200
-@@ -59,6 +59,14 @@
+@@ -59,6 +59,15 @@
      (%%TEXI_TGZ_SIZE%%K bytes gzipped tar file).</a></li>
  </ul>
  
-+<p>Documentation is also available in a few experimental formats:
++<p>There is also an API reference manual:
 +
 +<ul>
 +  <li><a href="../reference/">HTML API Reference Manual (GTK-DOC)</a>.</li>
++  <li><a href="../reference/%%PACKAGE%%.pdf">PDF Reference API Manual (GTK-DOC)</a>.
 +  <li><a href="../reference/gsasl.devhelp">DevHelp API Reference Manual (GTK-DOC)</a>.</li>
 +  <li><a href="../components.png">PNG image with developer and API information</a>.</li>
 +</ul>
